--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         go-version: '1.25'
     - uses: arduino/setup-protoc@v2
+      with:
+        protoc-version: '6.32.0'
 
     - name: Install Go dependencies
       run: |
