--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         go-version: '1.25'
     - uses: arduino/setup-protoc@v2
       with:
-        protoc-version: '4.23.4'
+        version: '4.23.4'
 
     - name: Install Go dependencies
       run: |
