--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,12 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version: '1.25'
-    - uses: arduino/setup-protoc@v2
-      with:
-        version: '4.23.4'
+    - name: Install protoc v4.23.4
+      run: |
+        curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v23.4/protoc-23.4-linux-x86_64.zip
+        sudo unzip -o protoc-23.4-linux-x86_64.zip -d /usr/local bin/protoc
+        sudo unzip -o protoc-23.4-linux-x86_64.zip -d /usr/local 'include/*'
+        rm protoc-23.4-linux-x86_64.zip
 
     - name: Install Go dependencies
       run: |
